Bug 1570402 - [RTL] Fix overlapping icon on text on the screen sharing popup prompt r=johannh
Differential Revision: https://phabricator.services.mozilla.com/D40825

UltraBlame original commit: 5a57a822a2df437ebec03b158fa9a269666a6379

--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -1698,6 +1698,37 @@ color
 webRTC
 -
 previewWarning
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+calc
+(
+100
+%
+-
+.
+75em
+)
+.
+75em
+;
+}
+#
+webRTC
+-
+previewWarning
 >
 .
 text
